--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,7 @@
     <title>Bosque Bahual</title>
 </head>
 <body>
-    
+    <h1>Inicio</h1>
     <script src="js/app.js"></script>
 </body>
 </html>
