--- a/src/index.html
+++ b/src/index.html
@@ -8,6 +8,14 @@
     <title>Bosque Bahual</title>
 </head>
 <body>
+    <div class="dropdown">
+        <button class="dropdown-btn">Dropdown</button>
+        <div class="dropdown-content">
+            <a href="#">Inicio</a>
+            <a href="#">Nosotros</a>
+            <a href="#">Contacto</a>
+        </div>
+    </div>
     <h1>Inicio</h1>
     <script src="js/app.js"></script>
 </body>
